@@ -816,7 +816,7 @@ static int magic_rsl_to_request(request_rec *r)
 	r->content_type = rsl_strdup(r, type_frag, type_pos, type_len);
 	/* XXX: this could be done at config time I'm sure... but I'm
 	 * confused by all this magic_rsl stuff. -djg */
-	ap_str_tolower(r->content_type);
+	ap_content_type_tolower(r->content_type);
     }
     if (state == rsl_encoding) {
 	r->content_encoding = rsl_strdup(r, encoding_frag,
