@@ -1,5 +1,10 @@
 Changes with Apache 1.3.1
 
+  *) Apache would incorrectly downcase the entire Content-Type passed from
+     CGIs.  This affected server-push scripts and such which use
+     multipart/x-mixed-replace;boundary=ThisRandomString.
+     [Dean Gaudet] PR#2394
+
   *) PORT: QNX update to properly guess 32-bit systems.
      [Sean Boudreau <seanb@qnx.com>] PR#2390
 
